# demo-github-action-predictions

./: README.md  main.py  pyproject.toml
.github/: schedule.yml
.github/workflows/: schedule.yml
